tdf#148554 RTF import - reset borders on fill cells

In documents containing tables with rows having different right margins
an additional cell is added to fill the gap.
These cells should be 'invisible' and therefore need to have no border.

Change-Id: I802310251f36fb6b2c00f3cb38786f438e4565a6
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/170179
Tested-by: Jenkins
Reviewed-by: Thorsten Behrens <thorsten.behrens@allotropia.de>
(cherry picked from commit 13cd36248069d32688cfb8adfe0955ca5229e075)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/170546
Reviewed-by: Michael Stahl <michael.stahl@allotropia.de>